# kobalt

./: .gitignore  CMakeLists.txt  concept.txt  kobalt.cpp  kobalt.h  kobalt.sln  kobalt.vcxproj  kobalt.vcxproj.filters  main.cpp  prism_vk.hpp  todo.md
enc_temp_folder/e2ddb58c8efd17748c66baab5e5bbc/: main.cpp
working/: shader.hlsl  shader.pixel.spv  shader.vertex.spv
x64/Debug/: kobalt.exe.recipe  kobalt.ilk  kobalt.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/kobalt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  kobalt.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
